// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState basic rendering should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingLeft": 12,
      "paddingRight": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#040404",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 20,
            "lineHeight": 24,
          },
          Object {
            "color": "#040404",
            "marginBottom": 6,
            "textAlign": "center",
          },
        ]
      }
      testID="empty-state-title"
    >
      Test empty state
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#040404",
            "fontFamily": "Inter-Regular",
            "fontSize": 15,
            "lineHeight": 23,
          },
          Object {
            "color": "#040404",
            "marginBottom": 14,
            "paddingLeft": 20,
            "paddingRight": 20,
            "textAlign": "center",
          },
        ]
      }
      testID="empty-state-description"
    >
      Test description
    </Text>
  </View>
</View>
`;

exports[`EmptyState full rendering should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingLeft": 12,
      "paddingRight": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#040404",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 20,
            "lineHeight": 24,
          },
          Object {
            "color": "#040404",
            "marginBottom": 6,
            "textAlign": "center",
          },
        ]
      }
      testID="empty-state-title"
    >
      Test empty state
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#040404",
            "fontFamily": "Inter-Regular",
            "fontSize": 15,
            "lineHeight": 23,
          },
          Object {
            "color": "#040404",
            "marginBottom": 14,
            "paddingLeft": 20,
            "paddingRight": 20,
            "textAlign": "center",
          },
        ]
      }
      testID="empty-state-description"
    >
      Test description
    </Text>
    <View
      style={
        Object {
          "borderRadius": 6,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="empty-state-button"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 20,
              "padding": 8,
              "paddingLeft": 20,
              "paddingRight": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 17,
                "lineHeight": 23,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Test button
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
